--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Hello, I'm Hirdesh Viikram. Passionate about machine learning, distributed systems, scalable solutions, and innovative technologies. Focused on building robust architectures and exploring cutting-edge algorithms to address real-world challenges. Eager to delve into diverse fields to discover new interests and drive impactful projects.">
+  <meta name="description" content="Hello, I'm Hirdesh Viikram. I have a strong interest in machine learning and distributed systems, looking foward to working on scalable, innovative solutions that address real-world challenges. I am enthusiastic about working with robust architectures and cutting-edge algorithms, and I eagerly anticipate exploring diverse fields and topics to uncover additional areas of interest.">
   <meta name="keywords" content="machine learning, distributed systems, scalable solutions, innovative technologies, robust architectures, cutting-edge algorithms, real-world challenges, impactful projects, technology exploration, software engineering, Python, Java, C++, algorithms, programming languages">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hirdesh Viikram</title>
