--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="contact-card">
         <div class="contact-icon">📧</div>
         <h3>Email</h3>
-        <p><a href="mailto:contact@hviik.com" style="color: var(--neon-cyan);">contact@hviik.com</a></p>
+        <p><a href="mailto:contact@hirdeshviikram.com" style="color: var(--neon-cyan);">contact@hirdeshviikram.com</a></p>
       </div>
       <div class="contact-card">
         <div class="contact-icon">🌐</div>
@@ -109,12 +109,12 @@
         <p>Bangalore, India</p>
       </div>
     </div>
-    <form class="contact-form" action="https://formspree.io/f/xovjwldq" method="POST">
-      <input type="text" class="form-input" placeholder="Your Name" required>
-      <input type="email" class="form-input" placeholder="Your Email" required>
-      <textarea class="form-input" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit" class="cyber-button">Send Message</button>
-    </form>
+  <form class="contact-form" action="https://formspree.io/f/xovjwldq" method="POST">
+    <input type="text" class="form-input" name="name" placeholder="Your Name" required>
+    <input type="email" class="form-input" name="email" placeholder="Your Email" required>
+    <textarea class="form-input" name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit" class="cyber-button">Send Message</button>
+  </form>
   </section>
 
   <!-- Footer -->
