--- a/health-assistant.html
+++ b/health-assistant.html
@@ -347,12 +347,12 @@ def interpret_question(text):
         <p>Bangalore, India</p>
       </div>
     </div>
-    <form class="contact-form" action="https://formspree.io/f/xovjwldq" method="POST">
-      <input type="text" class="form-input" placeholder="Your Name" required name="name">
-      <input type="email" class="form-input" placeholder="Your Email" required name="email">
-      <textarea class="form-input" rows="5" placeholder="Your Message" required name="message"></textarea>
-      <button type="submit" class="cyber-button">Send Message</button>
-    </form>
+  <form class="contact-form" action="https://formspree.io/f/xovjwldq" method="POST">
+    <input type="text" class="form-input" name="name" placeholder="Your Name" required>
+    <input type="email" class="form-input" name="email" placeholder="Your Email" required>
+    <textarea class="form-input" name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit" class="cyber-button">Send Message</button>
+  </form>
   </section>
 
   <!-- Footer -->
