--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>About Me</h2>
     <p>
       Hello, I'm Hirdesh Viikram. I have a strong interest in machine learning and distributed systems, looking foward to working on scalable, innovative solutions that address real-world challenges. I am enthusiastic about working with robust architectures and cutting-edge algorithms, and I eagerly anticipate exploring diverse fields and topics to uncover additional areas of interest.
-      <a href="certificates.html" class="github">View certifications.</a>
+      <a href="certificates.html" class="github-link">View certifications.</a>
   </section>
   <!-- Portfolio Section with Trigger for Projects Modal -->
   <section id="portfolio">
