--- a/neural-networks.html
+++ b/neural-networks.html
@@ -282,7 +282,7 @@ if __name__ == "__main__":
     </div>
     <p>
       <figure class="illustration-container">
-        <img src="img/img11.avif" alt="RNN">
+        <img src="img/img11.avif" alt="RNN" height="50%" width="50%">
         <figcaption>
           <p class="caption">Recurrent Neural Network</p>
           <p class="credit">
